# flight-statistic

./: .gitignore  LICENSE  README.md  docker-compose.dev.yaml  docker-compose.yaml  flight_delay.pbix  pyproject.toml  requirements.txt
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: deploy.yml
data/: Airline_Delay_Cause.csv
data/flightradar24/: airlines_1.csv  airlines_2.csv  airlines_3.csv  airports_1.csv  airports_2.csv  airports_3.csv  airports_4.csv  airports_5.csv  airports_6.csv
spark-master/: Dockerfile
src/: main.py  spark.py
src/engine/: config.py  s3.py  spark.py  yugabyte.py
src/lake/: s3.py
src/warehouse/: yugabyte.py
tasks/: flightaware.py  flightaware_bucket_2_staging.py  flightaware_staging_2_mart.py  flightrada24.py  flightradar24_bucket_2_staging.py  flightradar24_staging_2_mart.py  lake_2_warehouse.py
terraform/: minio.tf  provider.tf  spark_master.tf  spark_worker.tf  yugabytedb.tf
test/: minio.py  spark_pi.py
