# [build-system]
# requires = ["setuptools", "wheel"]
# build-backend = "setuptools.build_meta"

[project]
name = "engine"
version = "0.1.0"
description = "Flight data processing and warehouse management"
authors = [{name = "TuanKietTran", email = "kyletran101.work@gmail.com"}]
license = {text = "MIT"}
dependencies = [
    "boto3",
    "pyspark",
    "psycopg2-binary",
    "pandas",
    "matplotlib",
    "flightradar24",
    "pyarrow",
    "fastparquet"
]

# [tool.setuptools]
# packages = ["src"]
# include_package_data = true
